cilium-policy-evaluator/environment/clusterwide-policies/01-global-ops-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: global-ops-egress-restrict
spec:
  endpointSelector:
    matchLabels:
      env: ops
  egress:
    - toCIDR:
        - 10.0.0.0/8
